--- a/style.css
+++ b/style.css
@@ -130,8 +130,6 @@ header.image.text {
 .sidebar ul {
     list-style: none;
     padding-left: 0;
-    position: fixed;
-    top: 100px;
 }
 
 .sidebar li {
@@ -160,7 +158,7 @@ header.image.text {
 }
 
 .sidebar li a:hover {
-    background-color: var(--primary-color);
+    background-color: var(--primary-color-light);
     color: white;
 }
 
@@ -189,25 +187,18 @@ header.image.text {
     color: white;
     font-size: 20px;
     cursor: pointer;
-    transition: var(--tran-04);
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: var(--tran-03);
 }
 
 .animated-button:hover {
-    background-color: var(--primary-color);
-    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1);
-}
-
-.animated-button .icon {
-    font-size: 25px;
-    margin-right: 10px;
+    background-color: var(--primary-color-light);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .theme-toggle-button {
     display: flex;
     align-items: center;
-    justify-content: center;
-    margin-top: 10px;
+    margin-top: auto;
     padding: 10px;
     background-color: var(--primary-color);
     border: none;
@@ -215,16 +206,33 @@ header.image.text {
     color: white;
     font-size: 20px;
     cursor: pointer;
+    transition: var(--tran-03);
+}
+
+.theme-toggle-button:hover {
+    background-color: var(--primary-color-light);
+}
+
+.live-chat-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    padding: 10px 20px;
+    background-color: var(--primary-color);
+    border: none;
+    border-radius: 50%;
+    color: white;
+    font-size: 20px;
+    cursor: pointer;
     transition: var(--tran-04);
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.theme-toggle-button:hover {
-    background-color: var(--primary-color);
+.live-chat-button:hover {
+    background-color: var(--primary-color-light);
     box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1);
 }
 
-.theme-toggle-button .icon {
+.live-chat-button .icon {
     font-size: 25px;
-    margin-right: 10px;
 }
